--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,8 @@ body {
 }
 
 .right {
-    background-color: rgba(194, 119, 34, 0.774);
-    color: white;
+    background-image: linear-gradient(to bottom,  #fea41a, #e0750c, #922a00);
+    color:  #ab3c00;
     flex: 2;
     padding-top: 100px;
     padding-bottom: 100px;
@@ -49,9 +49,8 @@ padding-left: 50px;
 }
 
 form {
- 
+ color: rgb(245, 225, 212);
 flex: 2;
-opacity: 80%;
 }
 
 
@@ -95,6 +94,11 @@ opacity: 80%;
 
 .login {
    text-align: center;
+   color: #ccc;
+}
+.login a {
+text-decoration: none;
+color: rgb(255, 255, 255);
 }
 
 input {
@@ -111,4 +115,8 @@ input:focus {
 
 .dummy {
     color: rgba(226, 167, 112, 0.904);
+}
+
+.formbottom > button:hover {
+    cursor: pointer;
 }
